Fixed issue with dates not showing for infinitescroll by running showDate function on append

--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -6,6 +6,9 @@
  * Made By MaterializeCSS.com
  */
 
+.d-none {
+    display: none;
+}
 
 html {
     font-family: 'Josefin Slab', serif;
